Sun Jan 10 13:41:36 2016  Eric Wong  <e@80x24.org>

	* io.c (rb_deferr): remove long obsolete global

Sun Jan 10 09:14:42 2016  Eric Wong  <e@80x24.org>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_String):
	  eliminate chomp
	* lib/net/http.rb (connect): eliminate delete
	* lib/net/http/header.rb (basic_encode): ditto
	* lib/net/imap.rb (authenticate): eliminate gsub
	  (self.encode_utf7): shorten delete arg
	* lib/net/smtp.rb (base64_encode): eliminate gsub
	* lib/open-uri.rb (OpenURI.open_http): eliminate delete
	* lib/rss/rss.rb: ditto
	* lib/securerandom.rb (base64): ditto
	  (urlsafe_base64): eliminate delete!
	* lib/webrick/httpauth/digestauth.rb (split_param_value):
	  eliminate chop
	* lib/webrick/httpproxy.rb (do_CONNECT): eliminate delete
	  (setup_upstream_proxy_authentication): ditto
	  [ruby-core:72666] [Feature #11938]

Sat Jan  9 23:19:14 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_hash.rb (test_try_convert): Add test for
	  Hash.try_convert.  [Fix GH-1190]

Sat Jan  9 23:15:25 2016  Jon Moss  <maclover7@users.noreply.github.com>

	* ext/openssl/ossl.c: Add missing variables to documentation
	  examples.  [Fix GH-1189]

Sat Jan  9 18:25:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (is_attrset_id): ASET is an attrset ID.  fix
	  unexpected safe call instead of an ordinary ASET.

Sat Jan  9 10:44:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/setup.mak: extract RUBY_PROGRAM_VERSION from
	  RUBY_VERSION in version.h instead of RUBY_API_VERSION numbers in
	  include/ruby/version.h, and cut it into version numbers.

Sat Jan  9 07:13:33 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename PAGE_* to HEAP_PAGE_* because PAGE_SIZE is used
	  in Mac OS X.

	* test/ruby/test_gc.rb: catch up this fix.

Sat Jan  9 05:45:40 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: PAGE_BITMAP_PLANES (the number of bitmap) is 4, not 3.

Sat Jan  9 05:42:57 2016  Koichi Sasada  <ko1@atdot.net>
